--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "autoprefixer": "^10.4.20",
     "sass": "^1.79.3",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.4.0"
   }
 }
